# Preparation

./: pyproject.toml
src/: main.py
src/datastructures/: CircularLinkedList.py  DoublyLinkedList.py  LinkedList.py  ListNode.py
src/problems/linkedlist/: check_loop.py
src/problems/sql/: average_selling_price.sql  biggest_single_num.sql  confirmation_rate.sql  consecutive_nums.sql  customers_bought_all_products.sql  delete_duplicate_emails.sql  employee_bonus.sql  employees_whose_manager_left.sql  exchange_seats.sql  game_play_analysis_iv.sql  group_sold_products_by_the_date.sql  immediate_food_delivery2.sql  monthly_transactions1.sql  movie_rating.sql  number_employees_reporting.sql  product_price_al_given_date.sql  rising_teperature.sql  second_highest_salary.sql  students_and_examinations.sql  triangle_judgement.sql  user_activity_past_30_days1.sql
